--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -77,3 +77,16 @@
 /* 	text-align: justify; */
 /* 	text-justify: distribute; */
 /* } */
+
+@media only screen and (max-width: 550px) {
+	.banner__title {
+		font-size: 7vw;
+		padding: 1.5vw 2vw;
+		margin-bottom: 0.6vw;
+	}
+	.banner__subtitle {
+		font-size: 11vw;
+		text-shadow: 1px 1px 1px #999;
+		margin-bottom: 0;
+	}
+}
