--- a/src/components/Banner/Banner3/Banner3.css
+++ b/src/components/Banner/Banner3/Banner3.css
@@ -23,3 +23,12 @@
 	margin-left: 1%;
 }
 }
+
+
+
+@media only screen and (max-width: 550px) {
+	.banner__3 {
+		margin: auto;
+		margin-bottom: 0;
+	}
+}
