--- a/src/components/Banner/Banner3/Banner3.css
+++ b/src/components/Banner/Banner3/Banner3.css
@@ -29,6 +29,7 @@
 @media only screen and (max-width: 550px) {
 	.banner__3 {
 		margin: auto;
-		margin-bottom: 0;
+		margin-bottom: 4%;
+		margin-left: 2%;
 	}
 }
